# MediaCaptureAndRender

./: CMakeLists.txt  MainForm.cpp  MainForm.h  MainForm.ui  README.md  global.h
AudioModule/: AudioDeviceModule.cpp  AudioDeviceModule.h
VideoCapture/: VideoCaptureCapability.h  VideoCaptureFactory.cpp  VideoCaptureModule.h  VideoFrame.h
VideoModule/: DeviceInfoImpl.cpp  DeviceInfoImpl.h  VideoCaptureFactory.cpp  VideoCaptureFactory.h  VideoCaptureModule.h  VideoCaptureModuleImpl.cpp  VideoCaptureModuleImpl.h  VideoSinkInterface.h
VideoModule/windows/: DeviceInfoDS.cpp  DeviceInfoDS.h  VideoCaptureDS.cpp  VideoCaptureDS.h  sink_filter_ds.cpp  sink_filter_ds.h
tools/: string_utils.h
